--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "scripts": {
-    "build": "webpack",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production",
     "dev-server": "webpack-dev-server",
     "build-playground": "npx babel src/playground/counter-example.js --out-file=public/scripts/app.js --presets=@babel/preset-env,@babel/preset-react --watch",
     "serve": "live-server public"
