--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^6.6.0",
     "live-server": "^1.1.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
