--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^6.6.0",
+    "express": "^4.18.1",
     "live-server": "^1.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "moment": "^2.29.1",
