--- a/package.json
+++ b/package.json
@@ -46,5 +46,9 @@
     "validator": "13.7.0",
     "webpack": "^5.68.0",
     "yarn": "^1.22.17"
+  },
+  "engines": {
+    "node": "^15.14.0",
+    "npm": "^7.10.0"
   }
 }
