--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "enzyme": "^3.11.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
@@ -17,7 +18,6 @@
     "build:prod": "webpack --mode production",
     "dev-server": "webpack-dev-server",
     "build-playground": "npx babel src/playground/counter-example.js --out-file=public/scripts/app.js --presets=@babel/preset-env,@babel/preset-react --watch",
-    "serve": "live-server public",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
   },
@@ -27,7 +27,6 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^6.6.0",
     "express": "^4.18.1",
-    "live-server": "^1.1.0",
     "mini-css-extract-plugin": "^2.6.0",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
