--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "dependencies": {
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "firebase": "^9.7.0",
     "mini-css-extract-plugin": "^2.6.0",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
@@ -39,6 +42,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
