--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "description": "",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "cross-env": "^7.0.3",
@@ -30,6 +31,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "firebase": "^9.7.0",
+    "history": "^4.10.1",
     "mini-css-extract-plugin": "^2.6.0",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
